# ha-wattson

./: .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml
.cursor/: mcp.json
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yaml  homeassistant.yaml  lint.yaml  release.yaml
custom_components/wattson/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  cycle_detector.py  cycle_recorder.py  energy.py  entity.py  manifest.json  phase_extractor.py  profile_matcher.py  select.py  sensor.py  services.yaml  store.py  strings.json  switch.py  text.py
custom_components/wattson/translations/: en.json
scripts/: develop  setup
scripts/mcp_server/: __main__.py  config.py  ha_helpers.py
scripts/mcp_server/tools/: __init__.py  ha.py  mqtt.py
tests/: conftest.py  test_appliances.py  test_benchmark.py  test_config_flow.py  test_cycle_detector.py  test_cycle_recorder.py  test_disruptions.py  test_e2e.py  test_edge_cases.py  test_integration.py  test_phase_extractor.py  test_profile_matcher.py
tests/fixtures/: dryer_antiwrinkle.json  dryer_power.json  washer_power.json
tests/wattson_simulator/: __init__.py  config_flow.py  const.py  engine.py  manifest.json  select.py  sensor.py  strings.json  switch.py
